--- a/SubscriptApp/src/main/resources/org/openjfx/javafxmavenarchetypes/hello-view.fxml
+++ b/SubscriptApp/src/main/resources/org/openjfx/javafxmavenarchetypes/hello-view.fxml
@@ -3,13 +3,21 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Text?>
 
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/21" fx:controller="org.openjfx.javafxmavenarchetypes.HelloController">
+<VBox alignment="CENTER" prefHeight="239.0" prefWidth="243.0" spacing="20.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/21" fx:controller="org.openjfx.javafxmavenarchetypes.HelloController">
   <padding>
     <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
   </padding>
 
   <Label fx:id="welcomeText" styleClass="h1" text="Login" />
-  <Button onAction="#onHelloButtonClick" styleClass="btn-danger, btn" text="Login" />
+   <Label styleClass="form-control" text="Your login" />
+   <TextField fx:id="email" styleClass="form-control" />
+   <Label styleClass="form-control" text="Your password" />
+   <PasswordField fx:id="password" styleClass="form-control" />
+  <Button onAction="#onLogin" styleClass="btn-danger, btn" text="Login" />
+   <Text fx:id="longText" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
 </VBox>
