--- a/SubscriptApp/src/main/resources/com/SEApp/app/dashboard.fxml
+++ b/SubscriptApp/src/main/resources/com/SEApp/app/dashboard.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<VBox alignment="CENTER" prefHeight="239.0" prefWidth="243.0" spacing="20.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/21" fx:controller="org.openjfx.javafxmavenarchetypes.DashboardController">
+<VBox alignment="CENTER" prefHeight="239.0" prefWidth="243.0" spacing="20.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/21" fx:controller="com.SEApp.app.DashboardController">
   <padding>
     <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
   </padding>
