--- a/SubscriptApp/src/main/resources/com/SEApp/app/view/login.fxml
+++ b/SubscriptApp/src/main/resources/com/SEApp/app/view/login.fxml
@@ -11,7 +11,7 @@
       prefHeight="239.0"
       prefWidth="243.0"
       spacing="20.0"
-      xmlns="http://javafx.com/javafx/17.0.2-ea"
+      xmlns="http://javafx.com/javafx/21"
       xmlns:fx="http://javafx.com/fxml/1"
       fx:controller="com.SEApp.app.controller.Login">
     <padding>
