--- a/SubscriptApp/src/main/resources/com/SEApp/app/view/login.fxml
+++ b/SubscriptApp/src/main/resources/com/SEApp/app/view/login.fxml
@@ -3,7 +3,6 @@
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 
 
 <?import com.SEApp.app.components.*?>
@@ -17,7 +16,7 @@
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
-    <Header />
+<!--    <Header />-->
     <Label styleClass="h1" text="Login" />
     <Label styleClass="form-control" text="Your login" />
     <TextField fx:id="email" styleClass="form-control" />
@@ -28,5 +27,10 @@
     <HBox alignment="CENTER" spacing="10.0">
             <Label text="Enter your email and password to login" fx:id="error" styleClass="error" />
     </HBox>
+
+
+    <Pane fx:id="loadingPane" prefHeight="200.0" prefWidth="200.0" >
+
+    </Pane>
 
 </VBox>
