--- a/SubscriptApp/src/main/resources/com/SEApp/app/view/PaymentTypeManagement.fxml
+++ b/SubscriptApp/src/main/resources/com/SEApp/app/view/PaymentTypeManagement.fxml
@@ -16,7 +16,9 @@
             <Label styleClass="h1" text="Payment type management"/>
         </HBox>
         <ToolBar accessibleRole="BUTTON" prefHeight="40.0" prefWidth="200.0">
+            <Button mnemonicParsing="false" text="Home" onAction="#handleHomeButton"/>
             <Button mnemonicParsing="false" text="New" onAction="#handleNewButton"/>
+
         </ToolBar>
         <ScrollPane fx:id="displayPane" prefHeight="490.0" prefWidth="570.0"/>
     </VBox>
@@ -26,15 +28,15 @@
         <HBox alignment="CENTER" prefHeight="331.0" prefWidth="554.0">
             <VBox prefHeight="331.0" prefWidth="387.0" styleClass="modal">
                 <HBox prefHeight="100.0" prefWidth="200.0" fx:id="idArea">
-                    <Label text="Manager ID : "/>
+                    <Label text="Payment type ID : "/>
                     <Label fx:id="id" text="1"/>
                 </HBox>
                 <VBox prefHeight="74.0" prefWidth="387.0" styleClass="formControl" fx:id="nameArea">
-                    <Label text="Manager Name"/>
+                    <Label text="Payment type Name"/>
                     <TextField prefHeight="21.0" prefWidth="375.0" fx:id="name"/>
                 </VBox>
                 <VBox prefHeight="74.0" prefWidth="387.0" styleClass="formControl" fx:id="descriptionArea">
-                    <Label text="Manager Email"/>
+                    <Label text="Payment type Email"/>
                     <TextField prefHeight="21.0" prefWidth="375.0" fx:id="description"/>
                 </VBox>
 
@@ -45,7 +47,7 @@
                 </HBox>
 
                 <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
-                    <Label fx:id="message" text="Message"/>
+                    <Label fx:id="message" text=" "/>
                 </HBox>
             </VBox>
         </HBox>
