login logoff register ok

--- a/SubscriptApp/src/main/resources/com/SEApp/app/view/home.fxml
+++ b/SubscriptApp/src/main/resources/com/SEApp/app/view/home.fxml
@@ -6,8 +6,9 @@
 
 <VBox alignment="TOP_CENTER" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.SEApp.app.controller.HomeController">
     <fx:include source="../components/Header.fxml" />
-    <Button mnemonicParsing="false" text="Login" onAction="#handleLoginButton" />
-    <Button mnemonicParsing="false" text="Register" onAction="#handleRegisterButton" />
+    <Button mnemonicParsing="false" text="Login" onAction="#handleLoginButton" fx:id="loginButton" />
+    <Button mnemonicParsing="false" text="Register" onAction="#handleRegisterButton" fx:id="registerButton" />
+    <Button mnemonicParsing="false" text="LogOff" onAction="#handleLogOffButton" fx:id="logOffButton" />
     <Button mnemonicParsing="false" text="Managers" onAction="#handleManagersButton" />
     <Button mnemonicParsing="false" text="Types of Payment" onAction="#handlePaymentTypeButton" />
 </VBox>
