--- a/SubscriptApp/src/main/resources/com/SEApp/app/view/Register.fxml
+++ b/SubscriptApp/src/main/resources/com/SEApp/app/view/Register.fxml
@@ -13,21 +13,26 @@
       stylesheets="@../Style/main.css"
       xmlns="http://javafx.com/javafx/21"
       xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="com.SEApp.app.controller.Login">
+      fx:controller="com.SEApp.app.controller.Register">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
-<!--    <Header />-->
+    <!--    <Header />-->
     <Label styleClass="h1" text="Login" />
     <Label text="Your login" />
     <TextField fx:id="email"  />
+    <Label text="Your username" />
+    <TextField fx:id="username"  />
     <Label text="Your password" />
     <PasswordField fx:id="password" />
-    <Button onAction="#onLogin" text="Login" />
+
+    <Label text="Confirm your password" />
+    <PasswordField fx:id="confirmPassword" />
+
+    <Button onAction="#onRegister" text="Register" />
 
     <HBox alignment="CENTER" spacing="10.0">
-            <Label text="Enter your email and password to login" fx:id="error"/>
+        <Label text="Fill the form to register" fx:id="error"/>
     </HBox>
-
 
 </VBox>
