--- a/SubscriptApp/src/main/resources/com/SEApp/app/components/ListElement.fxml
+++ b/SubscriptApp/src/main/resources/com/SEApp/app/components/ListElement.fxml
@@ -1,30 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<fx:root alignment="CENTER"
-         prefHeight="150.0"
-         prefWidth="300.0"
-         styleClass="listElement"
-         stylesheets="@../Style/listElement.css"
-         type="VBox"
-         xmlns="http://javafx.com/javafx/17.0.2-ea"
-         xmlns:fx="http://javafx.com/fxml/1">
-    <Label fx:id="titleLabel" alignment="CENTER" styleClass="h1" stylesheets="@../Style/main.css" text="Titre"/>
-    <Label fx:id="descriptionLabel" alignment="CENTER" prefHeight="54.0" prefWidth="221.0" styleClass="description"
-           text="Description courte"/>
-    <SplitPane fx:id="splitPane" dividerPositions="0.5" prefHeight="77.0" prefWidth="338.0">
-        <VBox fx:id="editButtonContainer" alignment="CENTER">
-            <HBox alignment="CENTER">
-                <Button fx:id="editButton" text="Editer"/>
-            </HBox>
-        </VBox>
-        <VBox fx:id="deleteButtonContainer" alignment="CENTER">
-            <HBox alignment="CENTER">
-                <Button fx:id="deleteButton" text="Supprimer"/>
-            </HBox>
-        </VBox>
-    </SplitPane>
-
+<fx:root
+    alignment="CENTER_LEFT"
+    prefHeight="60.0"
+    prefWidth="600.0"
+    type="HBox"
+    stylesheets="@../Style/main.css"
+    xmlns="http://javafx.com/javafx/17.0.2-ea"
+    xmlns:fx="http://javafx.com/fxml/1">
+    <HBox alignment="CENTER_LEFT" prefHeight="60.0" prefWidth="376.0" spacing="30.0">
+        <Label styleClass="h1" text="Titre" fx:id="titleLabel"/>
+        <Label text="Description" fx:id="descriptionLabel"/>
+        <padding>
+            <Insets left="10.0"/>
+        </padding>
+    </HBox>
+    <HBox alignment="CENTER_RIGHT" prefHeight="60.0" prefWidth="231.0">
+        <Button mnemonicParsing="false" text="Subscription" fx:id="subscriptionButton"/>
+    </HBox>
 </fx:root>
