--- a/SubscriptApp/src/main/resources/com/SEApp/app/view/home.fxml
+++ b/SubscriptApp/src/main/resources/com/SEApp/app/view/home.fxml
@@ -14,4 +14,5 @@
     <Button mnemonicParsing="false" text="Plans" onAction="#handlePlansButton" fx:id="plansButton" />
     <Button mnemonicParsing="false" text="Subscriptions" onAction="#handleSubscriptionsButton" fx:id="subscriptionsButton" />
     <Button mnemonicParsing="false" text="Users" onAction="#handleUsersButton" fx:id="usersButton" />
+    <Button mnemonicParsing="false" text="Members" onAction="#handleMembersButton" fx:id="membersButton" />
 </VBox>
